feat: 实现jsx方法打包v1

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"type": "module",
 	"scripts": {
 		"lint": "eslint --ext .ts,.jsx,.tsx --fix --quiet ./packages",
-		"prepare": "husky"
+		"prepare": "husky",
+		"build:dev": "rollup --config ./scripts/rollup/react.config.js"
 	},
 	"keywords": [],
 	"author": "",
@@ -23,6 +24,7 @@
 		"husky": "^9.1.7",
 		"prettier": "^3.5.3",
 		"rollup": "^4.40.0",
+		"rollup-plugin-typescript2": "^0.36.0",
 		"typescript-eslint": "^8.31.0"
 	}
 }
