--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
 		"globals": "^16.0.0",
 		"husky": "^9.1.7",
 		"prettier": "^3.5.3",
+		"rimraf": "^6.0.1",
 		"rollup": "^4.40.0",
+		"rollup-plugin-generate-package-json": "^3.2.0",
 		"rollup-plugin-typescript2": "^0.36.0",
 		"typescript-eslint": "^8.31.0"
 	}
