--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"scripts": {
 		"lint": "eslint --ext .ts,.jsx,.tsx --fix --quiet ./packages",
 		"prepare": "husky",
-		"build:dev": "rollup --config ./scripts/rollup/react.config.js"
+		"build:dev": "rimraf ./dist && rollup --config ./scripts/rollup/react.config.js"
 	},
 	"keywords": [],
 	"author": "",
