--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"scripts": {
 		"lint": "eslint --ext .ts,.jsx,.tsx --fix --quiet ./packages",
 		"prepare": "husky",
-		"build:dev": "rimraf ./dist && rollup --config ./scripts/rollup/react.config.js"
+		"build:dev": "rimraf ./dist && rollup --config ./scripts/rollup/dev.config.js"
 	},
 	"keywords": [],
 	"author": "",
@@ -19,6 +19,7 @@
 		"@eslint/css": "^0.7.0",
 		"@eslint/js": "^9.25.1",
 		"@eslint/json": "^0.12.0",
+		"@rollup/plugin-alias": "^5.1.1",
 		"eslint": "^9.25.1",
 		"globals": "^16.0.0",
 		"husky": "^9.1.7",
