--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 	"scripts": {
 		"lint": "eslint --ext .ts,.jsx,.tsx --fix --quiet ./packages",
 		"prepare": "husky",
-		"build:dev": "rimraf ./dist && rollup --config ./scripts/rollup/dev.config.js"
+		"build:dev": "rimraf ./dist && rollup --config ./scripts/rollup/dev.config.js",
+		"just:test": "vite serve ./just-test-react/test-fc --config ./scripts/vite/vite.config.js --force"
 	},
 	"keywords": [],
 	"author": "",
@@ -28,7 +29,14 @@
 		"rollup": "^4.40.0",
 		"rollup-plugin-generate-package-json": "^3.2.0",
 		"rollup-plugin-typescript2": "^0.36.0",
-		"typescript-eslint": "^8.31.0"
+		"typescript-eslint": "^8.31.0",
+		"@types/react": "^19.1.8",
+		"@types/react-dom": "^19.1.6",
+		"@vitejs/plugin-react": "^4.5.2",
+		"eslint-plugin-react-hooks": "^5.2.0",
+		"eslint-plugin-react-refresh": "^0.4.20",
+		"typescript": "~5.8.3",
+		"vite": "^7.0.0"
 	},
 	"dependencies": {
 		"@rollup/plugin-replace": "^6.0.2"
